--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,5 +53,9 @@
             android:name=".RobotControlActivity"
             android:exported="false"
             android:label="@string/robot_control" />
+        
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
     </application>
 </manifest>
