--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,12 @@
 /.cxx/
 local.properties
 
-# Ignore toàn bộ build trừ debug APK cụ thể
-**/build/
-!app/build/
-!app/build/outputs/
-!app/build/outputs/apk/
-!app/build/outputs/apk/debug/
-!app/build/outputs/apk/debug/app-debug.apk
+# Ignore toàn bộ thư mục build
+/app/build/
+
+# Nhưng cho phép file APK debug
+!/app/build/outputs/
+!/app/build/outputs/apk/
+!/app/build/outputs/apk/debug/
+!/app/build/outputs/apk/debug/app-debug.apk
+
